[refactor] use `List.of` instead of `Arrays.asList`