@@ -14,7 +14,6 @@ import org.xhtmlrenderer.css.style.CssContext;
 import org.xhtmlrenderer.util.GeneralUtil;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -23,10 +22,13 @@ import java.util.regex.Pattern;
 import static java.util.Locale.ROOT;
 
 public class FSLinearGradient {
-    private int x1, y1, x2, y2;
+    private int x1 = 0;
+    private int y1 = 0;
+    private int x2 = 0;
+    private int y2 = 0;
 	private final List<StopValue> stopPoints = new ArrayList<>(2);
 
-    public static class StopValue implements Comparable<StopValue> {
+    public static final class StopValue implements Comparable<StopValue> {
         private final FSColor color;
         private final short lengthType;
         @Nullable
@@ -73,25 +75,22 @@ public class FSLinearGradient {
         }
     }
 
-	public List<StopValue> getStopPoints() {
-		return stopPoints;
-	}
+    public List<StopValue> getStopPoints() {
+        return stopPoints;
+    }
 
-	private float deg2rad(float deg)
-	{
-		return (float) Math.toRadians(deg);
-	}
+    private float deg2rad(float deg) {
+        return (float) Math.toRadians(deg);
+    }
 
-	private float rad2deg(float rad)
-	{
-		return (float) Math.toDegrees(rad);
-	}
+    private float rad2deg(float rad) {
+        return (float) Math.toDegrees(rad);
+    }
 
 	// Compute the endpoints so that a gradient of the given angle
 	// covers a box of the given size.
 	// From: https://github.com/WebKit/webkit/blob/master/Source/WebCore/css/CSSGradientValue.cpp
-	private void endPointsFromAngle(float angleDeg, int w, int h)
-	{
+	private void endPointsFromAngle(float angleDeg, int w, int h) {
 	    angleDeg = angleDeg % 360;
 	    if (angleDeg < 0)
 	        angleDeg += 360;
@@ -140,31 +139,24 @@ public class FSLinearGradient {
 	    // and a line perpendicular to it that intersects the corner.
 	    float perpendicularSlope = -1 / slope;
 
-	    // Compute start corner relative to center, in Cartesian space (+y = up).
-	    float halfHeight = h / 2.0f;
-	    float halfWidth = w / 2.0f;
-	    float xEnd, yEnd;
+        // Compute start corner relative to center, in Cartesian space (+y = up).
+        float halfHeight = h / 2.0f;
+        float halfWidth = w / 2.0f;
+        float xEnd, yEnd;
 
-	    if (angleDeg < 90)
-	    {
-	    	xEnd = halfWidth;
-	    	yEnd = halfHeight;
-	    }
-	    else if (angleDeg < 180)
-	    {
-	    	xEnd = halfWidth;
-	    	yEnd = -halfHeight;
-	    }
-	    else if (angleDeg < 270)
-	    {
-	    	xEnd = -halfWidth;
-	    	yEnd = -halfHeight;
-	    }
-	    else
-	    {
-	    	xEnd = -halfWidth;
-	    	yEnd = halfHeight;
-	    }
+        if (angleDeg < 90) {
+            xEnd = halfWidth;
+            yEnd = halfHeight;
+        } else if (angleDeg < 180) {
+            xEnd = halfWidth;
+            yEnd = -halfHeight;
+        } else if (angleDeg < 270) {
+            xEnd = -halfWidth;
+            yEnd = -halfHeight;
+        } else {
+            xEnd = -halfWidth;
+            yEnd = halfHeight;
+        }
 
 	    // Compute c (of y = mx + c) using the corner point.
 	    float c = yEnd - perpendicularSlope * xEnd;
@@ -181,8 +173,7 @@ public class FSLinearGradient {
 	    y1 = (int) (halfHeight + endY);
 	}
 
-	private void constructZero()
-	{
+	private void constructZero() {
 		//BuilderUtil.cssNoThrowError(LangId.FUNCTION_GENERAL, "linear-gradient");
 
 		// Just return a 1px wide (nearly) transparent gradient.
@@ -218,139 +209,120 @@ public class FSLinearGradient {
         return BACKGROUND_POSITIONS_IDENTS.contains(val) || looksLikeALength(val);
     }
 
-    public FSLinearGradient(final FSFunction func, final CalculatedStyle style, final int width, final int height, final CssContext ctx)
-    {
+    public FSLinearGradient(final FSFunction func, final CalculatedStyle style, final int width, final int height, final CssContext ctx) {
         final List<PropertyValue> params = func.getParameters();
         int i = 1;
 
-        if (params.isEmpty())
-        {
+        if (params.isEmpty()) {
             constructZero();
             return;
         }
 
-        if (GeneralUtil.ciEquals(params.get(0).getStringValue(), "to"))
-        {
+        if (GeneralUtil.ciEquals(params.get(0).getStringValue(), "to")) {
             // The "to" keyword is followed by one or two position
             // idents (in any order).
             // linear-gradient( to left top, blue, red);
             // linear-gradient( to top right, blue, red);
-            for ( ; i < params.size(); i++)
-            {
+            for ( ; i < params.size(); i++) {
                 if (params.get(i).getStringValue() == null || !looksLikeABGPosition(params.get(i).getStringValue()))
                     break;
             }
 
             List<String> positions = Collections.emptyList();
 
-            if (i == 2)
-            {
-                positions = Collections.singletonList(params.get(1).getStringValue().toLowerCase(ROOT));
+            if (i == 2) {
+                positions = List.of(params.get(1).getStringValue().toLowerCase(ROOT));
             }
             else if (i == 3)
             {
-                positions = Arrays.asList(
+                positions = List.of(
                         params.get(1).getStringValue().toLowerCase(ROOT),
                         params.get(2).getStringValue().toLowerCase(ROOT));
             }
 
-            if (positions.contains("top") && positions.contains("left"))
-            {
+            if (positions.contains("top") && positions.contains("left")) {
                 x1 = width;
                 y1 = height;
 
                 x2 = 0;
                 y2 = 0;
             }
-            else if (positions.contains("top") && positions.contains("right"))
-            {
+            else if (positions.contains("top") && positions.contains("right")) {
                 x1 = 0;
                 y1 = height;
 
                 x2 = width;
                 y2 = 0;
             }
-            else if (positions.contains("bottom") && positions.contains("left"))
-            {
+            else if (positions.contains("bottom") && positions.contains("left")) {
                 x1 = width;
                 y1 = 0;
 
                 x2 = 0;
                 y2 = height;
             }
-            else if (positions.contains("bottom") && positions.contains("right"))
-            {
+            else if (positions.contains("bottom") && positions.contains("right")) {
                 x1 = 0;
                 y1 = 0;
 
                 x2 = width;
                 y2 = height;
             }
-            else if (positions.contains("bottom"))
-            {
+            else if (positions.contains("bottom")) {
                 x1 = 0;
                 y1 = 0;
 
                 x2 = 0;
                 y2 = height;
             }
-            else if (positions.contains("top"))
-            {
+            else if (positions.contains("top")) {
                 x1 = 0;
                 y1 = height;
 
                 x2 = 0;
                 y2 = 0;
             }
-            else if (positions.contains("left"))
-            {
+            else if (positions.contains("left")) {
                 x1 = width;
                 y1 = 0;
 
                 x2 = 0;
                 y2 = 0;
             }
-            else if (positions.contains("right"))
-            {
+            else if (positions.contains("right")) {
                 x1 = 0;
                 y1 = 0;
 
                 x2 = width;
                 y2 = 0;
             }
-            else
-            {
+            else {
                 constructZero();
                 return;
             }
         }
-        else if (params.get(0).getPrimitiveType() == CSSPrimitiveValue.CSS_DEG)
-        {
+        else if (params.get(0).getPrimitiveType() == CSSPrimitiveValue.CSS_DEG) {
             // linear-gradient(45deg, ...)
             endPointsFromAngle(params.get(0).getFloatValue(), width, height);
         }
-        else if (params.get(0).getPrimitiveType() == CSSPrimitiveValue.CSS_RAD)
-        {
+        else if (params.get(0).getPrimitiveType() == CSSPrimitiveValue.CSS_RAD) {
             // linear-gradient(2rad, ...)
             endPointsFromAngle(rad2deg(params.get(0).getFloatValue()), width, height);
         }
-        else
-        {
+        else {
             // linear-gradient function must begin with the word 'to' or an angle.
             constructZero();
             return;
         }
 
-        if (params.size() - i < 2)
-        {
+        if (params.size() - i < 2) {
             // Less than two color stops provided.
             constructZero();
             return;
         }
 
 
-        for (; i < params.size(); i++)
-        {
+        for (; i < params.size(); i++) {
             // Each stop point can have a color and optionally a length.
             final PropertyValue value = params.get(i);
             FSRGBColor color = switch (value.getPrimitiveType()) {
@@ -377,21 +349,17 @@ public class FSLinearGradient {
         }
 
         // Normalize lengths into dots values.
-        for (int m = 0; m < stopPoints.size(); m++)
-        {
+        for (int m = 0; m < stopPoints.size(); m++) {
             final StopValue pt = stopPoints.get(m);
-            if (pt.length != null)
-            {
+            if (pt.length != null) {
                 pt.dotsValue =
                         LengthValue.calcFloatProportionalValue(style, CSSName.BACKGROUND_IMAGE, "", pt.length, pt.lengthType, width, ctx);
             }
-            else if (m == 0)
-            {
+            else if (m == 0) {
                 // First value is zero.
                 pt.dotsValue = 0.0f;
             }
-            else if (m == stopPoints.size() - 1)
-            {
+            else if (m == stopPoints.size() - 1) {
                 // Last value is 100%.
                 pt.dotsValue =
                         LengthValue.calcFloatProportionalValue(style, CSSName.BACKGROUND_IMAGE, "100%", 100.0f, PropertyValue.CSS_PERCENTAGE, width, ctx);
@@ -406,16 +374,13 @@ public class FSLinearGradient {
         // no endless loop.
 
         // Now normalize those stop points without a length.
-        for (int j = 1; j < stopPoints.size(); j++)
-        {
+        for (int j = 1; j < stopPoints.size(); j++) {
             if (j + 1 < stopPoints.size() &&
                     stopPoints.get(j).dotsValue == null &&
-                    increment == 0.0f)
-            {
+                    increment == 0.0f) {
                 int k = j + 1;
 
-                for (; k < stopPoints.size(); k++)
-                {
+                for (; k < stopPoints.size(); k++) {
                     if (stopPoints.get(k).dotsValue != null)
                     {
                         nextValue = stopPoints.get(k).dotsValue;
@@ -439,11 +404,9 @@ public class FSLinearGradient {
 
         Collections.sort(stopPoints);
 
-        for (int b = 0; b < stopPoints.size() - 1; b++)
-        {
+        for (int b = 0; b < stopPoints.size() - 1; b++) {
             if (stopPoints.get(b).dotsValue.equals(
-                    stopPoints.get(b + 1).dotsValue))
-            {
+                    stopPoints.get(b + 1).dotsValue)) {
                 // Duplicate lengths.
                 constructZero();
                 return;
@@ -454,23 +417,19 @@ public class FSLinearGradient {
 	// These function get the x, y of the starting and ending points of the gradient.
 	// They assume a start at zero, so should be offset when used.
 
-	public int getStartX()
-	{
+	public int getStartX() {
 		return x1;
 	}
 
-	public int getEndX()
-	{
+	public int getEndX() {
 		return x2;
 	}
 
-	public int getStartY()
-	{
+	public int getStartY() {
 		return y1;
 	}
 
-	public int getEndY()
-	{
+	public int getEndY() {
 		return y2;
 	}
 
